syntax = "proto3";

package dereview.dereview;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dereview/dereview/params.proto";
import "dereview/dereview/post.proto";

option go_package = "dereview/x/dereview/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/dereview/dereview/params";
  
  }
  
  // Queries a list of HelloDereview items.
  rpc HelloDereview (QueryHelloDereviewRequest) returns (QueryHelloDereviewResponse) {
    option (google.api.http).get = "/dereview/dereview/hello_dereview/{name}";
  
  }
  
  // Queries a list of Post items.
  rpc GetPost  (QueryGetPostRequest) returns (QueryGetPostResponse) {
    option (google.api.http).get = "/dereview/dereview/post/{id}";
  
  }
  rpc ListPost (QueryAllPostRequest) returns (QueryAllPostResponse) {
    option (google.api.http).get = "/dereview/dereview/post";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryHelloDereviewRequest {
  string name = 1;
}

message QueryHelloDereviewResponse {
  string name = 1;
}

message QueryGetPostRequest {
  uint64 id = 1;
}

message QueryGetPostResponse {
  Post Post = 1 [(gogoproto.nullable) = false];
}

message QueryAllPostRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPostResponse {
  repeated Post                                   Post       = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

